# WasFeines

./: README.md  run.sh
api/: README.md  pyproject.toml
api/src/: main.py
api/src/wasfeines/: app.py  settings.py
api/src/wasfeines/llm/: anthropic_recipe_service.py
api/src/wasfeines/models/: __init__.py  draft.py  message.py  rating.py  recipe.py  user.py
api/src/wasfeines/storage/: repository.py
api/tests/: conftest.py  test_api_e2e.py  test_llm.py
content/: recipe_Peanut_Protein_Balls.html  recipe_Peanut_Protein_Balls.json  recipe_Spaghetti_Bolognese.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  AppNavigationBar.tsx  Counter.tsx  ImageWithSkeleton.tsx  MediaItemContainer.tsx  MyLists.tsx  RecipeAddView.tsx  RecipeDetailView.tsx  RecipeSwipeableView.tsx  SlideInWrapper.tsx  main.tsx
frontend/src/api/: client.ts  schema.d.ts  useDeleteRecipe.ts  useDraftRecipe.ts  useGenerate.ts  useRecipes.ts
frontend/src/context/: RecipeProvider.tsx  recipeReducer.ts
