[project]
name = "wasfeines-api"
version = "0.1.0"
description = "WasFeines API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.9",
    "fastapi[standard]>=0.115.11",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.37.9",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]