[project]
name = "wasfeines-api"
version = "0.1.0"
description = "WasFeines API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "authlib>=1.5.1",
    "boto3==1.35.99",
    "fastapi[standard]>=0.115.11",
    "itsdangerous>=2.2.0",
    "lxml>=5.4.0",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "boto3-stubs[essential]>=1.37.9",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "types-oauthlib>=3.2.0.20240806",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
